# $Id: CMakeLists.txt 1320 2014-10-26 08:12:52Z justin $

set(LFL_PNG 1)
set(LFL_JPEG 1)
set(LFL_BOX2D 1)
set(LFL_GLES2 1)

if(LFL_ANDROID)
elseif(LFL_IPHONE)
elseif(LFL_HEADLESS)
else(LFL_ANDROID)
 set(LFL_FFMPEG 1)
 # set(LFL_QT 1)
 set(LFL_GLEW 1)
 set(LFL_GLFWINPUT 1)
 set(LFL_GLFWVIDEO 1)
 # set(LFL_SDLINPUT 1)
 # set(LFL_SDLVIDEO 1)
 set(LFL_LAME 1)
 set(LFL_PORTAUDIO 1)
 set(LFL_X264 1)
 if(NOT WIN32)
 set(LFL_GLOG 1)
 endif(NOT WIN32)
endif(LFL_ANDROID)

lfl_project(spaceball)
add_subdirectory(../lfapp ${CMAKE_CURRENT_BINARY_DIR}/lfapp_obj)
add_definitions(${LFAPP_DEF})
include_directories(${LFAPP_INCLUDE})

if(LFL_ANDROID)
add_library(spaceball spaceball.cpp)
add_library(spaceballserv spaceballserv.cpp)
else(LFL_ANDROID)
add_executable(spaceball spaceball.cpp)
target_link_libraries(spaceball ${LFAPP_LIB})
add_executable(spaceballserv spaceballserv.cpp)
target_link_libraries(spaceballserv ${LFAPP_LIB})
endif(LFL_ANDROID)

