# $Id: CMakeLists.txt 1320 2014-10-26 08:12:52Z justin $

lfl_clear_projects()
set(LFL_PNG 1)
set(LFL_GLES2 1)
set(LFL_ICONV 1)
set(LFL_OPENSSL 1)
set(LFL_FREETYPE 1)
set(LFL_LFLVIDEO 1)
set(LFL_LFLINPUT 1)
if(LFL_ANDROID)
elseif(LFL_IPHONE)
else(LFL_ANDROID)
 set(LFL_GLEW 1)
 set(LFL_GLOG 1)
endif(LFL_ANDROID)

lfl_project(lterm)
add_subdirectory(../lfapp ${CMAKE_CURRENT_BINARY_DIR}/${LFL_PROJECT}_lfapp_obj)
if(LFL_ANDROID)
add_library(lterm term.cpp)
else(LFL_ANDROID)
add_executable(lterm term.cpp)
target_link_libraries(lterm ${LFAPP_LIB})
endif(LFL_ANDROID)
target_compile_definitions(lterm PUBLIC ${LFAPP_DEF})
target_include_directories(lterm PUBLIC ${LFAPP_INCLUDE})

lfl_clear_projects()
set(LFL_PNG 1)
set(LFL_GIF 1)
set(LFL_JPEG 1)
set(LFL_HEADLESS 1)
if(LFL_ANDROID)
elseif(LFL_IPHONE)
else(LFL_ANDROID)
 set(LFL_GLOG 1)
endif(LFL_ANDROID)

lfl_project(lterm-sandbox-render)
add_subdirectory(../lfapp ${CMAKE_CURRENT_BINARY_DIR}/${LFL_PROJECT}_lfapp_obj)
add_executable(lterm-sandbox-render render.cpp)
target_link_libraries(lterm-sandbox-render ${LFAPP_LIB})
target_compile_definitions(lterm-sandbox-render PUBLIC ${LFAPP_DEF})
target_include_directories(lterm-sandbox-render PUBLIC ${LFAPP_INCLUDE})
